Component Extend Styles ready

--- a/src/02-components-patterns/styles/styles.module.css
+++ b/src/02-components-patterns/styles/styles.module.css
@@ -29,6 +29,7 @@
     cursor: pointer;
     background-color: transparent;
     border: 1px solid black;
+    color: inherit;
     border-radius: 5px 0px 0px 5px;
     font-size: 20px;
     width: 30px;
@@ -52,6 +53,7 @@
     cursor: pointer;
     background-color: transparent;
     border: 1px solid black;
+    color: inherit;
     border-radius: 0px 5px 5px 0px;
     font-size: 20px;
     width: 30px;
